prevent default css double loading, align contacts to top of divs

--- a/files/zc_plugins/GPSR/v1.0.0/catalog/includes/templates/default/css/gpsr_styles.css
+++ b/files/zc_plugins/GPSR/v1.0.0/catalog/includes/templates/default/css/gpsr_styles.css
@@ -1,4 +1,6 @@
-/* default CSS styles for the GPSR manufacturer info on the product_info page*/
+/* default CSS styles for the GPSR manufacturer info on the product_info page */
+/* last updated 14/12/2024 */
+
 #gpsrInfo{
     margin-top: 0.4em;
     margin-bottom: 0.4em;
@@ -33,8 +35,6 @@
     font-weight: bold;
 }
 
-
-
 #gpsrCompanies {
     margin-top: 0.4em;
 }
@@ -43,5 +43,5 @@
 #gpsrEu, #gpsrNonEu {
     margin: 0.2em;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: top;
 }
